// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render file item 1`] = `
<Component
  ariaId="suggestion-1-1"
  innerRef={[Function]}
  onClick={[Function]}
  onMouseEnter={[Function]}
  query="bar"
  selected={false}
  suggestion={
    Object {
      "description": "This is a file",
      "end": 10,
      "selectUrl": "http://github.com/elastic/elasticsearch/src/foo/bar.java",
      "start": 1,
      "text": "src/foo/bar.java",
      "tokenType": "",
    }
  }
>
  <styled.div
    active={false}
    aria-selected={false}
    id="suggestion-1-1"
    onClick={[Function]}
    onMouseEnter={[Function]}
    role="option"
  >
    <div
      aria-selected={false}
      className="sc-bdVaJa jlNfAS"
      id="suggestion-1-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      role="option"
    >
      <styled.div>
        <div
          className="sc-bwzfXH dIdIHh"
        >
          <div>
            <Styled(styled.div)
              data-test-subj="codeTypeaheadItem"
            >
              <styled.div
                className="sc-ifAKCX byMHiA"
                data-test-subj="codeTypeaheadItem"
              >
                <div
                  className="sc-ifAKCX byMHiA sc-htpNat bUoeMH"
                  data-test-subj="codeTypeaheadItem"
                >
                  <span>
                    src/foo/
                    <strong>
                      bar
                    </strong>
                    .java
                  </span>
                </div>
              </styled.div>
            </Styled(styled.div)>
            <Styled(styled.div)>
              <styled.div
                className="sc-EHOje iasAWb"
              >
                <div
                  className="sc-EHOje iasAWb sc-htpNat bUoeMH"
                >
                  This is a file
                </div>
              </styled.div>
            </Styled(styled.div)>
          </div>
        </div>
      </styled.div>
    </div>
  </styled.div>
</Component>
`;

exports[`render repository item 1`] = `
<Component
  ariaId="suggestion-1-1"
  innerRef={[Function]}
  onClick={[Function]}
  onMouseEnter={[Function]}
  query="kibana"
  selected={false}
  suggestion={
    Object {
      "description": "",
      "end": 10,
      "selectUrl": "http://github.com/elastic/kibana",
      "start": 1,
      "text": "elastic/kibana",
      "tokenType": "",
    }
  }
>
  <styled.div
    active={false}
    aria-selected={false}
    id="suggestion-1-1"
    onClick={[Function]}
    onMouseEnter={[Function]}
    role="option"
  >
    <div
      aria-selected={false}
      className="sc-bdVaJa jlNfAS"
      id="suggestion-1-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      role="option"
    >
      <styled.div>
        <div
          className="sc-bwzfXH dIdIHh"
        >
          <div>
            <Styled(styled.div)
              data-test-subj="codeTypeaheadItem"
            >
              <styled.div
                className="sc-ifAKCX byMHiA"
                data-test-subj="codeTypeaheadItem"
              >
                <div
                  className="sc-ifAKCX byMHiA sc-htpNat bUoeMH"
                  data-test-subj="codeTypeaheadItem"
                >
                  <span>
                    elastic/
                    <strong>
                      kibana
                    </strong>
                  </span>
                </div>
              </styled.div>
            </Styled(styled.div)>
            <Styled(styled.div)>
              <styled.div
                className="sc-EHOje iasAWb"
              >
                <div
                  className="sc-EHOje iasAWb sc-htpNat bUoeMH"
                />
              </styled.div>
            </Styled(styled.div)>
          </div>
        </div>
      </styled.div>
    </div>
  </styled.div>
</Component>
`;

exports[`render symbol item 1`] = `
<Component
  ariaId="suggestion-1-1"
  innerRef={[Function]}
  onClick={[Function]}
  onMouseEnter={[Function]}
  query="string"
  selected={false}
  suggestion={
    Object {
      "description": "elastic/elasticsearch > src/foo/bar.java",
      "end": 10,
      "selectUrl": "http://github.com/elastic/elasticsearch/src/foo/bar.java",
      "start": 1,
      "text": "java.lang.String",
      "tokenType": "tokenClass",
    }
  }
>
  <styled.div
    active={false}
    aria-selected={false}
    id="suggestion-1-1"
    onClick={[Function]}
    onMouseEnter={[Function]}
    role="option"
  >
    <div
      aria-selected={false}
      className="sc-bdVaJa jlNfAS"
      id="suggestion-1-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      role="option"
    >
      <styled.div>
        <div
          className="sc-bwzfXH dIdIHh"
        >
          <Styled(styled.div)>
            <styled.div
              className="sc-bxivhb goHlpn"
            >
              <div
                className="sc-bxivhb goHlpn sc-htpNat bUoeMH"
              >
                <EuiToken
                  displayOptions={Object {}}
                  iconType="tokenClass"
                  size="s"
                >
                  <div
                    className="euiToken euiToken--tokenTint01 euiToken--circle euiToken--small"
                  >
                    <EuiIcon
                      size="m"
                      type="tokenClass"
                    >
                      <tokenClass
                        className="euiIcon euiIcon--medium"
                        focusable="false"
                        height="16"
                        style={null}
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <svg
                          className="euiIcon euiIcon--medium"
                          focusable="false"
                          height="16"
                          style={null}
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M11.333 7.027H9.375c-.056-.708-.48-1.187-1.222-1.187-.972 0-1.5.806-1.5 2.16 0 1.43.545 2.16 1.486 2.16.708 0 1.139-.415 1.236-1.08l1.958.015C11.236 10.418 10.181 12 8.097 12c-1.958 0-3.43-1.41-3.43-4 0-2.6 1.514-4 3.43-4 1.792 0 3.084 1.095 3.236 3.027z"
                            fillRule="evenodd"
                          />
                        </svg>
                      </tokenClass>
                    </EuiIcon>
                  </div>
                </EuiToken>
              </div>
            </styled.div>
          </Styled(styled.div)>
          <div>
            <Styled(styled.div)
              data-test-subj="codeTypeaheadItem"
            >
              <styled.div
                className="sc-ifAKCX byMHiA"
                data-test-subj="codeTypeaheadItem"
              >
                <div
                  className="sc-ifAKCX byMHiA sc-htpNat bUoeMH"
                  data-test-subj="codeTypeaheadItem"
                >
                  <span>
                    java.lang.
                    <strong>
                      String
                    </strong>
                  </span>
                </div>
              </styled.div>
            </Styled(styled.div)>
            <Styled(styled.div)>
              <styled.div
                className="sc-EHOje iasAWb"
              >
                <div
                  className="sc-EHOje iasAWb sc-htpNat bUoeMH"
                >
                  elastic/elasticsearch &gt; src/foo/bar.java
                </div>
              </styled.div>
            </Styled(styled.div)>
          </div>
        </div>
      </styled.div>
    </div>
  </styled.div>
</Component>
`;
